[Feature-API Gateway]: Add Swagger for Interact and Post
