# back-end/api-gateway/internal/models/LikeReq.go
@@ -4,3 +4,9 @@ type LikeRequest struct {
 	UserId string `json:"userId"`
 	PostId string `json:"postId"`
 }
+
+type SwaggerLikeResp struct {
+	StatusCode int    `json:"statusCode"`
+	Data       bool   `json:"data"`
+	Message    string `json:"message"`
+}
